change related to design

--- a/src/app/modules/projectdetails/projectdetails.component.html
+++ b/src/app/modules/projectdetails/projectdetails.component.html
@@ -279,11 +279,11 @@
   <div class="modal-body">
     <div class="box">
       <span class="input-title"
-        >Designation<span style="color: red"> *</span>
+        >Department<span style="color: red"> *</span>
         <ng-multiselect-dropdown
           class="ms-1"
           style="background-color: #fafbfc; width: 300px"
-          [placeholder]="'Choose Designation'"
+          [placeholder]="'Choose Department'"
           [(ngModel)]="department"
           [settings]="this.dropdownSettings"
           [data]="this.dropdownListbuyerType"
